# agentic-ai-auto-learning-system

./: .env.example  .env.production  .gitignore  =3.9.0  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  PROGRESS.md  README.md  SECURITY_AUDIT.md  demo_github_issues_searcher.py  demo_llm_wrapper.py  demo_prometheus_analyzer.py  docker-compose.yml  integration_demo.py  integration_test_scenario.py  pyproject.toml  quick_test.py  ssh_executor_fixes_summary.md
aals/: __init__.py
aals/core/: __init__.py  config.py  logger.py
aals/integrations/: __init__.py  claude_client.py  github_client.py  prometheus_client.py  slack_client.py
aals/modules/: __init__.py  alert_correlator.py  github_issues_searcher.py  llm_wrapper.py  prometheus_analyzer.py  response_orchestrator.py  slack_alert_reader.py  ssh_executor.py
config/: alert_correlator.yaml  default.yaml  response_orchestrator.yaml  ssh_executor.yaml
monitoring/: prometheus.yml
scripts/: deploy.sh  docker-entrypoint.sh  init-db.sql
tests/: ALERT_CORRELATOR_FIXES.md  __init__.py  conftest.py  test_alert_correlator.py  test_config.py  test_github_issues_searcher.py  test_llm_wrapper.py  test_logger.py  test_prometheus_analyzer.py  test_response_orchestrator.py  test_slack_alert_reader.py  test_ssh_executor.py
